--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 <body>
   <nav>
     <div class="logo">
-      <img src="https://image.freepik.com/free-vector/burger-logo-vector_27088-105.jpg" alt="Burger Shop">
+      <a href="#"><img src="https://image.freepik.com/free-vector/burger-logo-vector_27088-105.jpg" alt="Burger Shop"></a>
     </div>
     <ul class="nav-links">
       <li><a href="#home">Home</a></li>
