--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
       <a href="#"><img src="https://image.freepik.com/free-vector/burger-logo-vector_27088-105.jpg" alt="Burger Shop"></a>
     </div>
     <ul class="nav-links">
-      <li><a href="#home">Home</a></li>
+      <li><a href="#">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#menu">Menu</a></li>
       <li><a href="#contact">Contact</a></li>
